-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.792 2010-09-20 21:51:06 guru Exp $
-----------------------------------------------------------------------------------------

2010-09-20	pwessel
	* src/ps2raster.c:	Made tolerant of \r line-endings.

2010-09-15	pwessel
	* sph/Makefile:		Did not have LDFLAGS in link statement

2010-09-07	pwessel
	* ps2raster.c:		The -A- option did not reset -A for -W.
	* grdtrack.c:		Did not ensure that given -R was adjusted to fit grid spacing
	* minmax.c:		With -I, could end up returning -R355/0/... since 360 becomes 0.

2010-09-03	pwessel
	* misc/gmtstitch.c:	Could crash if -C was used.

2010-08-30	pwessel
	* nearneighbor.c:	Did not check that -S was not set.

2010-08-25	pwessel
	* psxy[z].c:		Units given in -S without sizes (e.g., -Sci) would be
				ignored and overridden by MEASURE_UNIT.

2010-08-21	pwessel
	* misc/gmt2kml.c:	Did not parse -D"description" for points.

2010-08-19	pwessel
	* gmt_plot.c:		map_latline/lonline tried to draw a 2-point line when
				no points were defined.  Checks that we have at least 2 points
	* psxy.c:		The -Ap|m options were ignored since the mode was not checked.
	* grdmask.c:		---"---

2010-08-18	jluis
	* ps2raster.c:		Added missing on-line description of -C option.

2010-08-17	pwessel
	* GMT_App_F.sh:		Missed two slots that should be shaded in Standard+
	* misc/gmt2kml.c:	Only append running number when a segment has more than
				one point, else just use segment label.

2010-08-03	pwessel
	* gmt_plot.c:		Bug in fault symbol psxy -Sfrc, fixed w/ thanx to J. Robert

2010-07-28	pwessel
	* spotter/rotconverter.c:	Complained of "bad option" when a rotation with a
				negative longitude was given on the command line, e.g. -135/35/-2.5
				Would sometimes issues a rotation twice (same time)
		
2010-07-27	pwessel
	* spotter/backtracker.c:	Added the -F option to compute predicted hotspot tracks